# cognitive-router

./: .gitignore  LICENSE  README.md  config.qwen3_3b.vllm.yaml  config.qwen3_7b.vllm.yaml  config.qwen3b.transformers.fp16.yaml  config.qwen3b.transformers.yaml  config.qwen3b.vllm.yaml  config.qwen7b_awq.vllm.yaml  config.yaml  instruction.md  playground_qwen_router.ipynb  pyproject.toml  qwen_router_playground.ipynb  qwen_router_playground_recovered.ipynb  reasoning - Routing fundamentals overview.html  routes .yaml  routes.yaml
cognitive_router/: __init__.py  keyword.py  similarity.py
data/: sample_queries.csv
examples/: api_server.py  basic_usage.py  routes_examples.yaml
routing_fundamentals/: aggregate.py  alternatives.md  cli.py  dispatch.py  qwen_loader.py  router.py  telemetry.py
scripts/: benchmark.py
tests/: conftest.py  test_router.py
tools/: __init__.py  build_centroids.py
