[tool.poetry]
name = "routing-fundamentals"
version = "0.1.2"
description = "Lightweight, interpretable routing with centroids, raw scoring, and Qwen playground."
authors = ["Stanislav Komarovsky <skomarovsky@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/skomarovsky/routing-fundamentals"
repository = "https://github.com/skomarovsky/routing-fundamentals"
packages = [{ include = "routing_fundamentals" }]

[tool.poetry.scripts]
router = "routing_fundamentals.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = ">=1.26,<3"
pyyaml = "*"
transformers = ">=4.42"
accelerate = "*"
einops = "*"
sentence-transformers = "*"
openai = ">=1.30.0"
rich = "*"

# Optional heavy backends (install later)
torch = {version = "*", optional = true}
bitsandbytes = {version = "*", markers = "platform_system != 'Windows'", optional = true}
auto-gptq = {version = "*", optional = true}
gradio = {version = "*", optional = true}

[tool.poetry.extras]
ui = ["gradio"]
gpu-bnb = ["bitsandbytes"]
gptq = ["auto-gptq"]
pytorch = ["torch"]

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
mypy = "*"
pytest = "*"
ipykernel = "*"
jupyter = "*"
nbformat = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"