[project]
name = "routing-fundamentals"
version = "0.1.2"
description = "Lightweight, interpretable routing with centroids, raw scoring, and Qwen playground."
authors = [{name = "Stanislav Komarovsky", email = "skomarovsky@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"

dependencies = [
    "numpy>=1.26,<3",
    "pyyaml",
    "transformers>=4.42",
    "accelerate",
    "einops",
    "sentence-transformers",
    "openai>=1.30.0",
    "rich",
    "vllm",
]

[project.optional-dependencies]
ui = ["gradio"]
gpu-bnb = ["bitsandbytes; platform_system != 'Windows'"]
gptq = ["auto-gptq"]
pytorch = ["torch"]

[project.scripts]
router = "routing_fundamentals.cli:main"

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "ipykernel",
    "jupyter",
    "nbformat",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"